<resources>
    <string name="module_ops_category_location">Location</string>
    <string name="module_ops_category_personal">Personal</string>
    <string name="module_ops_category_message">Message</string>
    <string name="module_ops_category_media">Media</string>
    <string name="module_ops_category_device">Device</string>
    <string name="module_ops_category_bg">Background</string>
    <string name="module_ops_category_remaining">Others</string>
    <string name="module_ops_category_thanox">Thanox</string>

    <string name="module_ops_title_op_remind_apps">Watching apps</string>

    <string name="module_ops_title_reset_ops_mode_for_all">Reset all</string>

    <string name="module_ops_feature_title_app_ops_list">App ops</string>
    <string name="module_ops_feature_summary_app_ops_list">By app</string>
    <string name="module_ops_activity_title_app_ops_list">By app</string>

    <string name="module_ops_feature_title_a_manage">Manage activities</string>
    <string name="module_ops_feature_title_s_manage">Manage services</string>
    <string name="module_ops_feature_title_r_manage">Manage receivers</string>
    <string name="module_ops_feature_title_p_manage">Manage providers</string>

    <string name="module_ops_feature_title_block_uninstall">Prevent uninstall</string>
    <string name="module_ops_feature_title_block_clear_data">Prevent clear data</string>

    <string name="module_ops_feature_title_ops_app_list">App ops</string>
    <string name="module_ops_feature_summary_ops_app_list">By ops</string>
    <string name="module_ops_activity_title_ops_app_list">By ops（%s）</string>

    <string name="module_ops_feature_title_ops_remind_list">Privacy Watcher</string>
    <string name="module_ops_feature_summary_ops_remind">Remind you during op</string>

    <string name="module_ops_mode_allow">Allow</string>
    <string name="module_ops_mode_foreground">Allow in foreground</string>
    <string name="module_ops_mode_ignore">Ignore</string>
    <string name="module_ops_mode_all">All</string>

    <string name="module_ops_mode_allow_all">All allow</string>
    <string name="module_ops_mode_foreground_all">All allow in foreground</string>
    <string name="module_ops_mode_ignore_all">All ignore</string>
    <string name="module_ops_mode_ask_all">All ask</string>
</resources>
