<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/mode_allow"
            android:icon="@drawable/module_ops_ic_checkbox_circle_fill_green"
            android:title="@string/module_ops_mode_allow"
            app:showAsAction="never" />

    <item
            android:id="@+id/mode_foreground"
            android:icon="@drawable/module_ops_ic_checkbox_circle_fill_grey"
            android:title="@string/module_ops_mode_foreground"
            app:showAsAction="never" />

    <item
            android:id="@+id/mode_ignore"
            android:icon="@drawable/module_ops_ic_forbid_2_fill_red"
            android:title="@string/module_ops_mode_ignore"
            app:showAsAction="never" />

</menu>
